# swingrust

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh
.github/workflows/: nightly-release.yml
src/: main.rs
src/api/: album.rs  artist.rs  auth.rs  backup.rs  collections.rs  colors.rs  favorites.rs  folder.rs  getall.rs  home.rs  imgserver.rs  logger.rs  lyrics.rs  mixes.rs  mod.rs  playlist.rs  plugins.rs  plugins_mixes.rs  scrobble.rs  search.rs  settings.rs  stream.rs  track.rs
src/config/: mod.rs  paths.rs  user_config.rs
src/core/: albums.rs  artistlib.rs  colorlib.rs  crons.rs  ffmpeg.rs  file_cache.rs  folder.rs  homepage.rs  images.rs  indexer.rs  lyrics.rs  mapstuff.rs  mod.rs  playlistlib.rs  populate.rs  recipes.rs  search.rs  silence.rs  sorting.rs  tagger.rs  trackslib.rs  transcode.rs  watchdogg.rs
src/db/: engine.rs  migrations.rs  mod.rs  userdata.rs
src/db/tables/: collection_table.rs  favorite_table.rs  libdata_table.rs  mix_table.rs  mod.rs  page_table.rs  playlist_table.rs  plugin_table.rs  scrobble_table.rs  similar_artist_table.rs  track_table.rs  user_table.rs
src/models/: album.rs  artist.rs  enums.rs  favorite.rs  folder.rs  lastfm.rs  mix.rs  mod.rs  playlist.rs  plugins.rs  stats.rs  track.rs  user.rs
src/plugins/: lastfm.rs  lyrics.rs  mod.rs
src/serializers/: mod.rs
src/stores/: album_store.rs  artist_store.rs  folder_store.rs  homepage_store.rs  mod.rs  track_store.rs
src/utils/: artist_split_detector.rs  auth.rs  dates.rs  extras.rs  filesystem.rs  hashing.rs  mod.rs  network.rs  parsers.rs  progress.rs  threading.rs  tools.rs  tracks.rs
