[package]
name = "swingmusic"
version = "2.0.0"
edition = "2021"
description = "A beautiful, self-hosted music player for your local audio files"
authors = ["swingmx"]
license = "MIT"
repository = "https://github.com/swingmx/swingmusic"
keywords = ["music", "player", "streaming", "audio", "self-hosted"]
categories = ["multimedia::audio"]

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
rand = "0.8"
hex = "0.4"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha1 = "0.10"

# Audio metadata
lofty = "0.18"

# Image processing
image = "0.24"
webp = "0.2"

# Color extraction
palette = "0.7"

# Fuzzy search
fuzzy-matcher = "0.3"
nucleo-matcher = "0.3"
strsim = "0.11"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"

# Unicode handling
deunicode = "1"

# Path handling
walkdir = "2"
glob = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
directories = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
once_cell = "1"
parking_lot = "0.12"
dashmap = "5"
rayon = "1"
regex = "1"
lazy_static = "1"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
tempfile = "3"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"
memmap2 = "0.9"
lru = "0.12"

# Progress bars
indicatif = "0.17"

# System info
sysinfo = "0.29"

# Background tasks
tokio-cron-scheduler = "0.9"

# FFmpeg sidecar for bundled ffmpeg/ffprobe binaries
ffmpeg-sidecar = "2.3"

[features]
default = []
ffmpeg = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "swingmusic"
path = "src/main.rs"
